# inclusive-education-helper

./: LICENSE  README.md  dataset_taged.csv  ingest.py  main.py  mec_faq.json  mec_faq_full.json  mec_faq_scraper.py  notebook.ipynb  pyproject.toml
data/base/: dataset.csv
data_prep/: app.py  extrator_legislacao.py
data_prep/config/: decreto.yaml  lei.yaml  resolucao.yaml
data_prep/data/processed/: chunks_legislacao.jsonl  decreto_12686_2025.jsonl
data_prep/parsers/: legal_parser.py
