[project]
name = "inclusive-education-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "jupyter>=1.1.1",
    "lxml>=6.1.1",
    "minsearch>=0.1.0",
    "openai>=2.42.0",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "selenium>=4.45.0",
    "webdriver-manager>=4.1.2",
]
